// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with form options align left 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignLeft css-zpphrz-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options align right 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-alignRight css-hlnzui-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options align undefined 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options color primary 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-vkc4v8-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options color secondary 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-18brw8f-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options color undefined 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options noWrap false 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options noWrap true 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-fvtpii-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options noWrap undefined 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options otherProps [object Object] 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options otherProps undefined 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options paragraph false 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options paragraph true 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph css-z2eky3-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options paragraph undefined 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options variant h1 1`] = `
<div>
  <h1
    class="MuiTypography-root MuiTypography-h1 css-o2w69a-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options variant h2 1`] = `
<div>
  <h2
    class="MuiTypography-root MuiTypography-h2 css-1sra7t5-MuiTypography-root"
  />
</div>
`;

exports[`renders with form options variant undefined 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
  />
</div>
`;
